[project]
name = "fork-adk-docs"
version = "0.1.0"
description = "Fork of https://github.com/google/adk-docs: tutorials and examples for using the Google ADK"
authors = [
    {name = "Doug",email = "doug.hayden@onixnet.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "google-adk (>=0.1.0,<0.2.0)",
    "litellm (>=1.65.4.post1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
